--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -1,5 +1,5 @@
 <section id="about" class="section about">
-  <div class="container mx-auto">
+  <div class="container blur mx-auto">
     <h2>About</h2>
 
     <p class="text-lg text-center">Not long ago, high-end motion picture finishing required expensive turn-key systems and huge overheads, but not anymore.</p>
@@ -12,7 +12,7 @@
     <p>The Finishing Suite is conveniently located right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
   </div>
 
-  <div class="container mx-auto mt-20">
+  <div class="container blur mx-auto mt-20">
     <a class="text-center" href="https://www.imdb.com/name/nm1403724" target="_blank">
       <img class="mx-auto rounded-full w-1/2 md:w-2/5" src="/images/people/alastair.jpg" alt="Alastair Tye Samson">
       <h3 class="pt-5">
