--- a/site/includes/components/upload.njk
+++ b/site/includes/components/upload.njk
@@ -1,6 +1,6 @@
 <section id="upload" class="section upload">
   <div class="container mx-auto">
-    <h2>Upload</h2>
+    <h2 class="mb-4">Upload</h2>
 
     <iframe src="https://thefinishingsuite.portal.massive.app/sendIframe" width="400" height="660" scrolling="no" style="display:block; margin: 0 auto;"></iframe>
   </div>
