--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -14,6 +14,8 @@ h2 {
   @apply font-serif;
   @apply text-center;
   @apply text-5xl;
+
+  text-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.4)
 }
 
 h3 {
