--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -1,5 +1,5 @@
 <section id="contact" class="section contact">
-  <div class="container mx-auto">
+  <div class="container blur mx-auto">
     <h2>Contact</h2>
 
     <img src="/images/logo/tfs_logo.png" alt="The Finishing Suite" />
