--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -1,5 +1,5 @@
 <section id="services" class="section services">
-  <div class="container mx-auto">
+  <div class="container blur mx-auto">
 
     <h2>Services</h2>
 
