--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -12,17 +12,16 @@
     <p>The Finishing Suite is conveniently located right in the heart of Ponsonby — just two minutes walk from Ponsonby Central.</p>
   </div>
 
-  <div class="container blur mx-auto mt-20">
-    <a class="text-center" href="https://www.imdb.com/name/nm1403724" target="_blank">
-      <img class="mx-auto rounded-full w-1/2 md:w-2/5" src="/images/people/alastair.jpg" alt="Alastair Tye Samson">
-      <h3 class="pt-5">
-        Alastair Tye Samson
-        <small class="block">Finishing Artist</small>
-      </h3>
-    </a>
-    <p class="mt-5">For fifteen years I have worked as an Online Editor, Colourist, and all-round motion picture finishing nerd.</p>
-    <p>I offer inspiration and experience using DaVinci Resolve, Autodesk Smoke, and Avid Symphony to finesse films, television shows, music videos and TVCs to be more awesome. I am fast and meticulous with an up-to-date knowledge of technology and a strong creative eye.</p>
-    <p>Over my 20 years experience in the screen industries I have worked with many high profile companies such as Weta Digital, Images&Sound, Warner Brothers NZ, South Pacific Pictures, Jam TV and heaps of others.</p>
-    <p>I love stories and storytelling. In 2009 I co-founded Hybrid Motion Pictures, a filmmaking collective with whom I produced and self-distributed my first indie feature film, JAKE, which was released theatrically in 2014.</p>
-  </div>
+  {%- for person in collections.people | reverse -%}
+    <div class="container blur mx-auto mt-20">
+      <a class="text-center" href="{{person.data.url}}" target="_blank">
+        <img class="mx-auto rounded-full w-1/2 md:w-2/5" src="{{person.data.image}}" alt="{{person.data.name}}">
+        <h3 class="pt-5">
+          {{person.data.name}}
+          <small class="block">{{person.data.title}}</small>
+        </h3>
+      </a>
+      {{ person.templateContent | safe }}
+    </div>
+  {%- endfor -%}
 </section>
