--- a/site/index.njk
+++ b/site/index.njk
@@ -9,5 +9,6 @@ meta_description: Boutique post-production in Ponsonby, Auckland
 {% include "components/portfolio.njk" %}
 {% include "components/about.njk" %}
 {% include "components/services.njk" %}
+{% include "components/news.njk" %}
 {% include "components/upload.njk" %}
 {% include "components/contact.njk" %}
