Fix news scrollspy

--- a/site/includes/components/news.njk
+++ b/site/includes/components/news.njk
@@ -1,4 +1,4 @@
-<section id="about" class="section news">
+<section id="news" class="section news">
   <div class="container blur mx-auto">
     <h2 class="mb-4">Latest News</h2>
 
