--- a/site/includes/components/portfolio.njk
+++ b/site/includes/components/portfolio.njk
@@ -1,9 +1,9 @@
-<section id="portfolio" class="section portfolio">
-  <div class="container mx-auto">
-    <h2 class="pt-0">Portfolio</h2>
+<section id="portfolio">
+  <div class="section portfolio py-4">
+    <div class="container mx-auto">
+      <h2 class="pt-0">Portfolio</h2>
+    </div>
   </div>
+  {% include "components/portfolio-grid.njk" %}
+  {% include "components/portfolio-slides.njk" %}
 </section>
-
-<div class="text-center">
-  MAGIC GRID
-</div>
