--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -1,7 +1,9 @@
 //==========  Import all component partials ==========//
 
+@import 'carousel';
 @import 'header';
 @import 'lazyload';
 @import 'nav';
-@import 'portfolio';
+@import 'portfolio-grid';
+@import 'portfolio-slides';
 @import 'section';
