--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -28,7 +28,7 @@
   {% endif %}
 </head>
 
-<body class="bg-black text-white">
+<body class="bg-black text-white portfolio-open">
   {{ content | safe }}
 </body>
 
