--- a/resources/sass/components/portfolio-slides.scss
+++ b/resources/sass/components/portfolio-slides.scss
@@ -28,14 +28,19 @@
       opacity: 1;
     }
   }
+
+  > .container {
+    position: relative;
+  }
 }
 
 .portfolio-slide {
-  @apply m-4;
   @apply bg-black;
 
+  display: none;
   position: relative;
   width: auto;
+
   text-align: center;
 
   .text {
@@ -75,11 +80,5 @@
         }
       }
     }
-  }
-
-  .portfolio-slide {
-    max-width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
