--- a/site/includes/components/portfolio-grid.njk
+++ b/site/includes/components/portfolio-grid.njk
@@ -1,6 +1,6 @@
-<div class="portfolio-grid">
+<div id="portfolioGrid" class="portfolio-grid">
   {%- for project in collections.portfolio | reverse -%}
-    <div title="{{ project.data.title }}">
+    <div class="portfolio-item" id="portfolioItem{{ loop.index }}" title="{{ project.data.title }}">
       <img data-lazy="{{ project.data.thumb }}" alt="{{ project.data.title }}">
     </div>
   {%- endfor -%}
