--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -1,36 +1,39 @@
-<div class="portfolio-slides visible">
+<div id="portfolioSlides" class="portfolio-slides">
+  <div class="container mx-auto">
 
-  <button type="button" class="close" aria-label="Close">
-    <span aria-hidden="true"><i class="fas fa-times-circle fa-2x"></i></span>
-  </button>
+    <button class="close" id="portfolioClose" type="button" aria-label="Close">
+      <span aria-hidden="true"><i class="fas fa-times-circle fa-2x"></i></span>
+    </button>
 
-  {%- for project in collections.portfolio | reverse -%}
-    <div class="portfolio-slide">
+    {%- for project in collections.portfolio | reverse -%}
+      <div class="portfolio-slide" id="portfolioSlide{{loop.index}}">
 
-      <div class="carousel">
-        <div class="carousel-inner">
-          {%- for image in project.data.images -%}
-            <div class="carousel-item active">
-              <img src="{{ image }}" />
-            </div>
-          {%- endfor -%}
+        <div class="carousel">
+          <div class="carousel-inner">
+            {%- for image in project.data.images -%}
+              <div class="carousel-item active">
+                <img src="{{ image }}" />
+              </div>
+            {%- endfor -%}
 
-          {%- for video in project.data.videos -%}
-            <div class="carousel-item">
-              <iframe src="{{ video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-          {%- endfor -%}
+            {%- for video in project.data.videos -%}
+              <div class="carousel-item">
+                <iframe src="{{ video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            {%- endfor -%}
+          </div>
+          <div class="carousel-control-prev"><i class="fas fa-chevron-left fa-3x"></i></div>
+          <div class="carousel-control-next"><i class="fas fa-chevron-right fa-3x"></i></div>
         </div>
-        <div class="carousel-control-prev"><i class="fas fa-chevron-left fa-3x"></i></div>
-        <div class="carousel-control-next"><i class="fas fa-chevron-right fa-3x"></i></div>
-      </div>
 
-      <div class="text">
-        <h3>{{ project.data.title }}</h3>
-        <p>{{ project.data.description}}</h3>
-        {{ project.templateContent | safe }}
-      </div>
+        <div class="text">
+          <h3>{{ project.data.title }}</h3>
+          <p>{{ project.data.description}}</h3>
+          {{ project.templateContent | safe }}
+        </div>
 
-    </div>
-  {%- endfor -%}
+      </div>
+    {%- endfor -%}
+
+  </div>
 </div>
