--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -1,5 +1,5 @@
 <div id="portfolioSlides" class="portfolio-slides">
-  <div class="container mx-auto">
+  <div class="container mx-auto mt-8">
 
     <button class="close" id="portfolioClose" type="button" aria-label="Close">
       <span aria-hidden="true"><i class="fas fa-times-circle fa-2x"></i></span>
@@ -10,7 +10,7 @@
         <div class="slide carousel" id="portfolioCarousel{{loop.index}}">
           <div class="carousel-inner">
             {%- for image in project.data.images -%}
-              <div class="carousel-item active">
+              <div class="carousel-item{%if loop.first %} active{% endif %}">
                 <img src="{{ image }}" />
               </div>
             {%- endfor -%}
@@ -24,8 +24,12 @@
         </div>
       {%- endfor -%}
 
-      <div class="portfolio-control next"><i class="fas fa-chevron-left fa-3x"></i></div>
-      <div class="portfolio-control prev"><i class="fas fa-chevron-right fa-3x"></i></div>
+      <div class="portfolio-control prev" title="Previous Image">
+        <i class="fas fa-chevron-left fa-2x"></i>
+      </div>
+      <div class="portfolio-control next" title="Next Image">
+        <i class="fas fa-chevron-right fa-2x"></i>
+      </div>
     </div>
 
     <div class="portfolio-text">
@@ -37,12 +41,12 @@
         </div>
       {%- endfor -%}
 
-      <div class="portfolio-control prev" id="portfolioPrev">
-        <i class="fas fa-chevron-left fa-3x"></i>
+      <div class="portfolio-control prev" id="portfolioPrev" title="Previous Portfolio">
+        <i class="fas fa-chevron-left fa-2x"></i>
       </div>
 
-      <div class="portfolio-control next" id="portfolioNext">
-        <i class="fas fa-chevron-right fa-3x"></i>
+      <div class="portfolio-control next" id="portfolioNext" title="Next Portfolio">
+        <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
   </div>
