--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -8,9 +8,9 @@
   <title>{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %} | {{ site.name }}</title>
 
   {% if helpers.environment === "development" %}
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   {% else %}
-    <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
   {% endif %}
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600" />
@@ -22,9 +22,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js" integrity="sha256-Jvh9+A4HNbbWsWl1Dw7kAzNsU3y8elGIjLnUSUNMtLg=" crossorigin="anonymous"></script>
   {% if helpers.environment === "development" %}
-    <script src="/js/main.js" defer></script>
+    <script src="js/main.js" defer></script>
   {% else %}
-    <script src="/js/main.min.js" defer></script>
+    <script src="js/main.min.js" defer></script>
   {% endif %}
 </head>
 
