--- a/site/includes/components/upload.njk
+++ b/site/includes/components/upload.njk
@@ -2,6 +2,6 @@
   <div class="container mx-auto">
     <h2 class="mb-4">Upload</h2>
 
-    <iframe src="https://thefinishingsuite.portal.massive.app/sendIframe" width="400" height="660" scrolling="no" style="display:block; margin: 0 auto;"></iframe>
+    <iframe src="https://thefinishingsuite.portal.massive.app/sendIframe" width="100%" height="660" scrolling="no" style="display:block; margin: 0 auto;"></iframe>
   </div>
 </section>
