--- a/resources/sass/components/_portfolio-slides.scss
+++ b/resources/sass/components/_portfolio-slides.scss
@@ -72,7 +72,30 @@
   }
 
   .slide {
-    @apply py-8;
+    @apply pb-8;
+  }
+}
+
+.portfolio-images-controls {
+  @apply py-4;
+
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  > div {
+    @apply px-1;
+
+    cursor: pointer;
+    opacity: .25;
+    transition: opacity .25s ease-in-out;
+
+    &:hover,
+    &.active {
+      opacity: 1;
+    }
   }
 }
 
