Portfolio hide/show

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,3 +1,7 @@
 //==========  Variables ==========//
 
 $red: #cf2525;
+
+$z-index-nav:                       50;
+$z-index-portfolio-backdrop:        60;
+$z-index-portfolio:                 61;
