--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -11,7 +11,7 @@
           {% set carouselNo = loop.index %}
           <div class="carousel-inner">
             {%- for image in project.data.images -%}
-              <div class="carousel-item{%if loop.first %} active{% endif %}">
+              <div class="carousel-item{%if loop.first %} active{% endif %}" data-slide="{{ loop.index }}">
                 <div class="aspect-ratio"></div>
                 <img data-lazy-late="{{ image }}" />
               </div>
