Hide indicators if single item

--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -7,8 +7,11 @@
 
     <div class="portfolio-images">
       {%- for project in collections.portfolio | reverse -%}
+
         <div class="slide carousel" id="portfolioCarousel{{loop.index}}">
+
           {% set carouselNo = loop.index %}
+
           <div class="carousel-inner">
             {%- for image in project.data.images -%}
               <div class="carousel-item{%if loop.first %} active{% endif %}" data-slide="{{ loop.index }}">
@@ -25,11 +28,23 @@
             {%- endfor -%}
           </div>
 
+          {% set totalSlideCount = 0 %}
+          {% if project.data.images %}
+            {% set totalSlideCount = totalSlideCount + project.data.images.length %}
+          {% endif %}
+          {% if project.data.videos %}
+            {% set totalSlideCount = totalSlideCount + project.data.videos.length %}
+          {% endif %}
+
           <div class="portfolio-images-controls">
+            {% if totalSlideCount > 1 -%}
+
             <div class="portfolio-image-prev" id="portfolioImagePrev" title="Previous Image">
               <i class="fas fa-chevron-left fa-fw"></i>
             </div>
+
             {% set slideCount = 0 %}
+
             {%- for image in project.data.images -%}
               {% set slideCount = slideCount + 1 %}
               <div class="indicator{%if loop.first %} active{% endif %}" data-target="portfolioCarousel{{carouselNo}}" data-slide="{{slideCount}}">
@@ -45,9 +60,12 @@
             <div class="portfolio-image-next" id="portfolioImageNext" title="Next Image">
               <i class="fas fa-chevron-right fa-fw"></i>
             </div>
+
+          {%- endif -%}
           </div>
 
         </div>
+
       {%- endfor -%}
     </div>
 
