Allow different image aspect ratios

--- a/resources/sass/components/_portfolio-slides.scss
+++ b/resources/sass/components/_portfolio-slides.scss
@@ -72,7 +72,8 @@
     h3 {
       @apply font-sans;
       @apply mb-4;
-      @apply text-uppercase;
+
+      text-transform: uppercase;
     }
 
     &.show {
