--- a/resources/sass/components/_nav.scss
+++ b/resources/sass/components/_nav.scss
@@ -29,11 +29,11 @@ nav {
 
   @apply w-full;
 
-  @apply bg-black;
-
   height: 0;
   opacity: 0;
   overflow: hidden;
+
+  background-color: theme('colors.black');
 
   transition: height 300ms ease-in-out, opacity 300ms ease-in-out;
 
@@ -49,7 +49,7 @@ nav {
 
     &.active,
     &:hover {
-      color: $red;
+      color: theme('colors.red');
     }
   }
 }
