Align portfolio grid left

--- a/resources/sass/components/_portfolio-grid.scss
+++ b/resources/sass/components/_portfolio-grid.scss
@@ -4,7 +4,7 @@
   @apply w-full;
   @apply flex;
   @apply flex-wrap;
-  @apply justify-center;
+  @apply justify-start;
 
   > div {
     @apply w-1/2;
