--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -1,6 +1,7 @@
 //==========  Import all component partials ==========//
 
 @import 'carousel';
+@import 'contact';
 @import 'header';
 @import 'lazyload';
 @import 'nav';
