--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -1,7 +1,5 @@
-<section id="contact" class="section contact">
-  <div class="container blur mx-auto">
-    <h2>Contact</h2>
-
+<section id="contact" class="contact">
+  <div class="container mx-auto">
     <img src="/images/logo/tfs_logo.png" alt="The Finishing Suite" />
 
     <div class="contact-links">
