--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -1,5 +1,5 @@
 <div id="portfolioSlides" class="portfolio-slides">
-  <div id="portfolioSlidesContainer" class="container mx-auto mt-8">
+  <div id="portfolioSlidesContainer" class="container mx-auto">
 
     <button class="close" id="portfolioClose" type="button" aria-label="Close">
       <span aria-hidden="true"><i class="fas fa-times-circle fa-2x"></i></span>
@@ -38,9 +38,9 @@
           <div class="portfolio-images-controls">
             {% if totalSlideCount > 1 -%}
 
-            <div class="portfolio-image-prev" id="portfolioImagePrev" title="Previous Image">
+            <!--<div class="portfolio-image-prev" id="portfolioImagePrev" title="Previous Image">
               <i class="fas fa-chevron-left fa-fw"></i>
-            </div>
+            </div>-->
 
             {% set slideCount = 0 %}
 
@@ -56,9 +56,10 @@
                 <i class="fas fa-circle fa-fw fa-sm"></i>
               </div>
             {%- endfor -%}
-            <div class="portfolio-image-next" id="portfolioImageNext" title="Next Image">
+
+            <!--<div class="portfolio-image-next" id="portfolioImageNext" title="Next Image">
               <i class="fas fa-chevron-right fa-fw"></i>
-            </div>
+            </div>-->
 
           {%- endif -%}
           </div>
