Portfolio image width

--- a/resources/sass/components/_carousel.scss
+++ b/resources/sass/components/_carousel.scss
@@ -21,6 +21,10 @@
   backface-visibility: hidden;
   transition: transform .25s ease-in-out;
 
+  > img {
+    width: 100%;
+  }
+
   &.active {
     display: block;
 
