--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -1,5 +1,5 @@
 <div id="portfolioSlides" class="portfolio-slides">
-  <div id="portfolioSlidesContainer" class="container mx-auto">
+  <div id="portfolioSlidesContainer" class="portfolio-slides-container">
 
     <button class="close" id="portfolioClose" type="button" aria-label="Close">
       <span aria-hidden="true"><i class="fas fa-times-circle fa-2x"></i></span>
