--- a/resources/sass/components/_nav.scss
+++ b/resources/sass/components/_nav.scss
@@ -1,4 +1,5 @@
 nav {
+
   @apply z-50;
 }
 
@@ -31,11 +32,15 @@ nav {
 
   @apply w-full;
 
+  @apply bg-cover;
+  @apply bg-center;
+
   height: 0;
   opacity: 0;
   overflow: hidden;
 
   background-color: theme('colors.black');
+  background-image: url('../images/backgrounds/texture.jpg');
 
   transition: height 300ms ease-in-out, opacity 300ms ease-in-out;
 
