--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -5,6 +5,7 @@
 @import 'header';
 @import 'lazyload';
 @import 'nav';
+@import 'portfolio';
 @import 'portfolio-grid';
 @import 'portfolio-slides';
 @import 'section';
