--- a/site/index.njk
+++ b/site/index.njk
@@ -6,6 +6,7 @@ meta_description: Boutique post-production in Ponsonby, Auckland
 
 {% include "components/header.njk" %}
 {% include "components/navbar.njk" %}
+{% include "components/suite.njk" %}
 {% include "components/portfolio.njk" %}
 {% include "components/about.njk" %}
 {% include "components/services.njk" %}
