Add icons to contact

--- a/site/includes/components/contact.njk
+++ b/site/includes/components/contact.njk
@@ -3,12 +3,24 @@
     <img src="images/logo/tfs_logo.png" alt="The Finishing Suite" />
 
     <div class="contact-links">
-      <a href='m&#97;ilt&#111;&#58;&#37;6&#49;la&#115;%&#55;4a%69r&#64;t&#104;ef%69nis&#104;in&#103;su&#105;&#37;&#55;4&#37;&#54;5&#46;co&#46;n%&#55;A'>alastair&#64;t&#104;ef&#105;&#110;ishing&#115;&#117;&#105;te&#46;co&#46;&#110;z</a>
-      <a href="tel:006421369544">+64 21 369 544</a>
-      <a href="https://www.instagram.com/thefinishingsuite" target="_blank">instagram.com/thefinishingsuite</a>
+      <a href='m&#97;ilt&#111;&#58;&#37;6&#49;la&#115;%&#55;4a%69r&#64;t&#104;ef%69nis&#104;in&#103;su&#105;&#37;&#55;4&#37;&#54;5&#46;co&#46;n%&#55;A'>
+        <i class="fas fa-envelope" style="margin-right: 5px;"></i>
+        alastair&#64;t&#104;ef&#105;&#110;ishing&#115;&#117;&#105;te&#46;co&#46;&#110;z
+      </a>
+      <a href="tel:006421369544">
+        <i class="fas fa-phone-alt" style="margin-right: 5px;"></i>
+        +64 21 369 544
+      </a>
+      <a href="https://www.instagram.com/thefinishingsuite" target="_blank">
+        <i class="fab fa-instagram" style="margin-right: 5px;"></i>
+        thefinishingsuite
+      </a>
     </div>
 
-    <p>Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021</p>
+    <p>
+      <i class="fas fa-map-marker-alt" style="margin-right: 5px;"></i>
+      Level 2, 46 Brown Street, Ponsonby, Auckland, New Zealand 1021
+    </p>
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.4181955181575!2d174.7409663160291!3d-36.856407687642005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d479772f8e0e9%3A0x205db67f888dcc6c!2sThe+Finishing+Suite!5e0!3m2!1sen!2snz!4v1518075728043" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
