--- a/site/includes/components/upload.njk
+++ b/site/includes/components/upload.njk
@@ -1,4 +1,4 @@
-<section id="upload" class="section upload" style="background-image: url(images/backgrounds/cans.jpg)">
+<section id="upload" class="section upload" style="background-image: url(images/backgrounds/texture.jpg)">
   <div class="container mx-auto">
     <h2 class="mb-4">Upload</h2>
 
