--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <base href="/the-finishing-suite/"/>
+  <base href="/"/>
 
   <title>{% if meta_title %}{{ meta_title }}{% else %}{{ title }}{% endif %} | {{ site.name }}</title>
 
