Consolidate background styles

--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -1,5 +1,6 @@
 //==========  Import all component partials ==========//
 
+@import 'backgrounds';
 @import 'carousel';
 @import 'contact';
 @import 'header';
@@ -9,3 +10,4 @@
 @import 'portfolio-grid';
 @import 'portfolio-slides';
 @import 'section';
+@import 'services';
