--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -1,4 +1,4 @@
-<section id="about" class="section about">
+<section id="about" class="section bg texture">
   <div class="container blur mx-auto">
     <h2>About</h2>
 
