--- a/site/index.njk
+++ b/site/index.njk
@@ -9,6 +9,9 @@ meta_description: Boutique post-production in Ponsonby, Auckland
 {% include "components/portfolio.njk" %}
 {% include "components/suite.njk" %}
 {% include "components/about.njk" %}
+{% include "components/couch.njk" %}
 {% include "components/services.njk" %}
+{% include "components/cans.njk" %}
 {% include "components/upload.njk" %}
+{% include "components/bricks.njk" %}
 {% include "components/contact.njk" %}
