--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,4 +1,4 @@
-<header class="header text-center bg-cover bg-center bg-fixed" style="background-image: url(images/backgrounds/tablet.jpg)">
+<header class="header bg">
   <div class="container mx-auto flex flex-col justify-center h-full">
 
     <h1 class="sr-only">The Finishing Suite</h1>
