--- a/site/includes/components/portfolio.njk
+++ b/site/includes/components/portfolio.njk
@@ -1,12 +1,9 @@
-<section id="portfolio">
-  <div class="section portfolio py-4">
-    <div class="container mx-auto">
-      <h2 class="pt-0">Portfolio</h2>
+<section id="portfolio" class="section portfolio bg texture">
+  <div class="container mx-auto">
+    <h2 class="pt-0">Portfolio</h2>
 
-      {% include "components/portfolio-grid.njk" %}
-    </div>
+    {% include "components/portfolio-grid.njk" %}
   </div>
-
 </section>
 
 {% include "components/portfolio-slides.njk" %}
