--- a/site/includes/components/services.njk
+++ b/site/includes/components/services.njk
@@ -1,4 +1,4 @@
-<section id="services" class="section services">
+<section id="services" class="section services bg texture">
   <div class="container blur mx-auto">
 
     <h2>Services</h2>
