Split about into two columns

--- a/resources/sass/components/_all.scss
+++ b/resources/sass/components/_all.scss
@@ -1,5 +1,6 @@
 //==========  Import all component partials ==========//
 
+@import 'about';
 @import 'backgrounds';
 @import 'carousel';
 @import 'contact';
