--- a/site/includes/components/about.njk
+++ b/site/includes/components/about.njk
@@ -1,4 +1,4 @@
-<section id="about" class="section about bg texture">
+<section id="about" class="section about bg bg-texture">
 
   <div class="container mx-auto">
 
