--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -1,4 +1,4 @@
-<header class="header bg">
+<header class="header bg bg-tablet">
   <div class="container mx-auto flex flex-col justify-center h-full">
 
     <h1 class="sr-only">The Finishing Suite</h1>
