Disable portfolio item prev/next and enable image carousel prev/next

--- a/site/includes/components/portfolio-slides.njk
+++ b/site/includes/components/portfolio-slides.njk
@@ -38,9 +38,9 @@
           <div class="portfolio-images-controls">
             {% if totalSlideCount > 1 -%}
 
-            <!--<div class="portfolio-image-prev" id="portfolioImagePrev" title="Previous Image">
+            <div class="portfolio-image-prev" id="portfolioImagePrev" title="Previous Image">
               <i class="fas fa-chevron-left fa-fw"></i>
-            </div>-->
+            </div>
 
             {% set slideCount = 0 %}
 
@@ -57,9 +57,9 @@
               </div>
             {%- endfor -%}
 
-            <!--<div class="portfolio-image-next" id="portfolioImageNext" title="Next Image">
+            <div class="portfolio-image-next" id="portfolioImageNext" title="Next Image">
               <i class="fas fa-chevron-right fa-fw"></i>
-            </div>-->
+            </div>
 
           {%- endif -%}
           </div>
@@ -78,13 +78,13 @@
         </div>
       {%- endfor -%}
 
-      <div class="portfolio-control prev" id="portfolioPrev" title="Previous Portfolio">
+      {# <div class="portfolio-control prev" id="portfolioPrev" title="Previous Portfolio">
         <i class="fas fa-chevron-left fa-2x"></i>
-      </div>
+      </div> #}
 
-      <div class="portfolio-control next" id="portfolioNext" title="Next Portfolio">
+      {# <div class="portfolio-control next" id="portfolioNext" title="Next Portfolio">
         <i class="fas fa-chevron-right fa-2x"></i>
-      </div>
+      </div> #}
     </div>
   </div>
 </div>
